Fixed overlap between account name and micropost option

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -449,6 +449,8 @@ div.user_info span.user_name {
 }
 
 div.user_info span.microposts {
+  position: relative;
+  left:275px;
   font-size: 80%;
 }
 
